--- a/styles.css
+++ b/styles.css
@@ -598,7 +598,8 @@ figure a {
     justify-content: center;
     justify-items: center;
     padding: 1rem 0;
-    gap: 1rem;
+    gap: 5;
+    row-gap: 1rem;
   }
 
   #nav-ul li:last-child {
