--- a/styles.css
+++ b/styles.css
@@ -559,6 +559,9 @@ figure a {
     #mobile-app-img {
     width: 80%;
   }
+  #main-img {
+    width: 60%;
+  }
   .title-feature {
     font-size: 2.4rem;
   }
